--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tippyjs/react": "^4.2.6",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
@@ -27,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "sass-embedded": "^1.83.0",
-    "vite": "^6.0.6"
+    "vite": "^6.0.6",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
