Hoàn thiện giao diện sidebar khi đăng nhập

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,5 @@
-VITE_BASE_URL=https://tiktok.fullstack.edu.vn/api
+VITE_BASE_URL=https://tiktok-video-no-watermark10.p.rapidapi.com/index/Tiktok/
+VITE_TITLE_KEY=x-rapidapi-key
+VITE_KEY=efa7408c09mshd012d2f8ac292a3p1321b3jsn173d91ed71d4
+VITE_TITLE_HOST=x-rapidapi-host
+VITE_HOST=tiktok-video-no-watermark10.p.rapidapi.com
