--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-VITE_BASE_URL=https://tiktok-video-no-watermark10.p.rapidapi.com/index/Tiktok/
+VITE_BASE_URL=https://tiktok-video-no-watermark2.p.rapidapi.com
 VITE_TITLE_KEY=x-rapidapi-key
-VITE_KEY=efa7408c09mshd012d2f8ac292a3p1321b3jsn173d91ed71d4
+VITE_KEY=edd99793dbmshcf6958c79775349p17a016jsnb69e96f4cd4f
 VITE_TITLE_HOST=x-rapidapi-host
-VITE_HOST=tiktok-video-no-watermark10.p.rapidapi.com
+VITE_HOST=tiktok-video-no-watermark2.p.rapidapi.com
