--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
