--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,7 @@
-VITE_BASE_URL=https://tiktok-video-no-watermark2.p.rapidapi.com
+VITE_BASE_URL_V1=https://tiktok-video-no-watermark2.p.rapidapi.com
+VITE_BASE_URL_V2=https://tiktok-api23.p.rapidapi.com/api
 VITE_TITLE_KEY=x-rapidapi-key
-VITE_KEY=ac874351eemsh5a75fd5ae3450bep181bd4jsna60da342029c
+VITE_KEY=8de40eea58msha4bf2cd832e9678p117589jsn9f794969b28c
 VITE_TITLE_HOST=x-rapidapi-host
-VITE_HOST=tiktok-video-no-watermark2.p.rapidapi.com
+VITE_HOST_V1=tiktok-video-no-watermark2.p.rapidapi.com
+VITE_HOST_V2=tiktok-api23.p.rapidapi.com
